// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarWidgetsEditionTools component should render widgets edition tools disabled because the widgets are not dirty 1`] = `
<div>
  <ForwardRef
    className="mr-2"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    type="button"
  >
    Save changes
  </ForwardRef>
  <ForwardRef
    intent="secondary"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </ForwardRef>
</div>
`;

exports[`InfobarWidgetsEditionTools component should render widgets edition tools enabled because the widgets are dirty and not being saved 1`] = `
<div>
  <ForwardRef
    className="mr-2"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    type="button"
  >
    Save changes
  </ForwardRef>
  <ForwardRef
    intent="secondary"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </ForwardRef>
</div>
`;

exports[`InfobarWidgetsEditionTools component should render widgets edition tools loading and disabled, because the widgets are being saved 1`] = `
<div>
  <ForwardRef
    className="mr-2"
    isDisabled={false}
    isLoading={true}
    onClick={[Function]}
    type="button"
  >
    Save changes
  </ForwardRef>
  <ForwardRef
    intent="secondary"
    isDisabled={false}
    isLoading={true}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </ForwardRef>
</div>
`;
